--- a/index.html
+++ b/index.html
@@ -1,6 +1,47 @@
-<!-- Display the countdown timer in an element -->
-<img src="https://hvacr-symposium.github.io/symposium.jpg" alt="Symposium Logo">
-<p id="demo"></p>
+<head>
+    <style>
+        .center {
+            margin: 0;
+            position: rel;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
+    </style>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- jQuery and JS bundle w/ Popper.js -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <!-- Display the countdown timer in an element -->
+    <div class="container">
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4 d-flex justify-content-center">
+                <img src="https://hvacr-symposium.github.io/symposium.jpg" alt="Symposium Logo">
+            </div>
+            <div class="col-4"></div>
+        </div>
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-4">
+                <h2 id="demo"></h2>
+            </div>
+            <div class="col-4"></div>
+        </div>
+    </div>
+    <footer class="py-4 bg-secondary text-white-50">
+        <div class="container">
+            <small>Powered By: Housh - The Home Energy Experts</small>
+        </div>
+    </footer>
+</body>
 
 <script>
 // Set the date we're counting down to
