--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-4"></div>
             <div class="col-4 d-flex justify-content-center">
-                <img src="https://hvacr-symposium.github.io/symposium.jpg" alt="Symposium Logo">
+                <img src="https://hvacr-symposium.github.io/symposium.png" alt="Symposium Logo">
             </div>
             <div class="col-4"></div>
         </div>
@@ -45,7 +45,7 @@
 
 <script>
 // Set the date we're counting down to
-var countDownDate = new Date("Jan 19, 2023 07:30:00").getTime();
+var countDownDate = new Date("Feb 01, 2024 08:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
