Added readme and initial image sizing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-4"></div>
             <div class="col-4 d-flex justify-content-center">
-                <img src="https://hvacr-symposium.github.io/symposium.png" alt="Symposium Logo">
+                <img src="https://hvacr-symposium.github.io/symposium.png" alt="Symposium Logo" width="500" height="500">
             </div>
             <div class="col-4"></div>
         </div>
