--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
             -ms-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
         }
+        .footer {
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          text-align: center;
+        }
     </style>
 
     <!-- CSS -->
