--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="col-4"></div>
         </div>
     </div>
-    <footer class="py-4 bg-secondary text-white-50">
+    <footer class="footer py-4 bg-secondary text-white-50">
         <div class="container">
             <small>Powered By: Housh - The Home Energy Experts</small>
         </div>
