Added navbar and ticket links

--- a/index.html
+++ b/index.html
@@ -26,12 +26,22 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+      <a class="navbar-brand" href="https://hvacrschool.com/events/5th-annual-hvac-r-training-symposium/">5th Annual Symposium</a>
+      <div class="d-flex align-self-end justify-content-end" id="navbar-content">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="https://hvacrschool.com/events/5th-annual-hvac-r-training-symposium/">Tickets</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <!-- Display the countdown timer in an element -->
     <div class="container">
-        <div class="row">
+        <div class="row pt-5">
             <div class="col-4"></div>
             <div class="col-4 d-flex justify-content-center">
-                <img src="https://hvacr-symposium.github.io/symposium.png" alt="Symposium Logo" width="1000" height="300">
+                <img width="1000" height="300" src="https://hvacr-symposium.github.io/symposium.png" alt="Symposium Logo">
             </div>
             <div class="col-4"></div>
         </div>
