feat: Updated for 2025

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="row pt-5">
             <div class="col-4"></div>
             <div class="col-4 d-flex justify-content-center">
-                <img width="1000" height="300" src="https://github.com/hvacr-symposium/hvacr-symposium.github.io/symposium.png" alt="Symposium Logo">
+                <img width="1000" height="300" src="/symposium.png" alt="Symposium Logo">
             </div>
             <div class="col-4"></div>
         </div>
